añadida la funcionalidad de noti en reporte

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,10 @@
   <link rel="stylesheet" type="text/css" href="./assets/bower_components/datedropper/css/datedropper.min.css">
   <!-- Data Table Css -->
   <link rel="stylesheet" type="text/css" href="./assets/bower_components/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
-
+  <!-- Notification.css -->
+  <link rel="stylesheet" type="text/css" href="./assets/assets/pages/notification/notification.css">
+  <!-- Animate.css -->
+  <link rel="stylesheet" type="text/css" href="./assets/bower_components/animate.css/css/animate.css">
 
 
   <link rel="stylesheet" type="text/css" href="./assets/assets/css/jquery.mCustomScrollbar.css">
@@ -165,6 +168,8 @@
 <script type="text/javascript" src="./assets/bower_components/bootstrap-daterangepicker/js/daterangepicker.js"></script>
 <!-- Date-dropper js -->
 <script type="text/javascript" src="./assets/bower_components/datedropper/js/datedropper.min.js"></script>
+<!-- notification js -->
+<script type="text/javascript" src="./assets/assets/js/bootstrap-growl.min.js"></script>
 <!-- data-table js -->
 <script src="./assets/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
 <script src="./assets/bower_components/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
