--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <app-root></app-root>
 <head>
-  <title>Evaluación de Curso de Posgrado</title>
+  <title>Evaluación de Curso de Postgrado</title>
   <!-- HTML5 Shim and Respond.js IE10 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 10]>
